<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.octicos.zakupy.MainActivity" >

    <Button
        android:id="@+id/listaZakupowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaZapupow" 
        android:onClick="listaZakupow"/>

    <Button
        android:id="@+id/twoiUzytkownicyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twoiUzytkownicy" 
        android:onClick="twoiUzytkownicy"/>

    <Button
        android:id="@+id/zakonczButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zakoncz"
        android:onClick="zakoncz" />

</LinearLayout>
