<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.octicos.zakupy.ListaZakupow" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/podajProduktField"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.64"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/iloscField"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/okProdukty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dodaj"
            android:text="@string/ok" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaZakupowList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="true" >
    </ListView>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="odswiezListe"
        android:text="@string/odswiezListe" />

    <Button
        android:id="@+id/wyczyscListeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="wyczyscListe"
        android:text="@string/wyczyscListe" />

</LinearLayout>